finish up GLSL conversion stuff and make some minor tweaks to shader parser

--- a/README
+++ b/README
@@ -14,9 +14,8 @@ What's the goal of rewriting OBS?
    necessary for user interface.  It also means allowing the use of OpenGL as
    well as Direct3D.
 
- - Separate the application from the core, allowing custom user interfaces and
-   custom appliction of the core if desired, and easier extending of the user
-   interface.
+ - Separate the application from the core, allowing custom custom appliction of
+   the core if desired, and easier extending of the user interface.
 
  - Simplify complex systems to not only make it easier to use, but easier to
    maintain.
