Add color property implementation

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -87,6 +87,7 @@ Basic.SourceSelect.AddExisting="Add Existing"
 # properties window
 Basic.PropertiesWindow="Properties for '%1'"
 Basic.PropertiesWindow.AutoSelectFormat="%1 (unsupported; autoselect: %2)"
+Basic.PropertiesWindow.SelectColor="Select color"
 
 # status bar
 Basic.StatusBar.Reconnecting="Disconnected, reconnecting (attempt %1)"
