--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -1,3 +1,7 @@
+# Note to translators: *DO NOT* translate this file directly. Instead, visit http://crowdin.net/project/obs-studio and submit your translations there.
+# Pull requests for translations outside of CrowdIn will not be accepted.
+# Read this forum post for more instructions on submitting translations: https://obsproject.com/forum/threads/how-to-contribute-translations-for-obs.16327/
+
 # Language and language region of this file
 Language="English"
 Region="United States"
