--- a/obs/data/locale/nb-NO.ini
+++ b/obs/data/locale/nb-NO.ini
@@ -18,7 +18,7 @@ Mixer="Mikser"
 Browse="Bla gjennom"
 Mono="Mono"
 Stereo="Stereo"
-DroppedFrames="Droppede bilder %1 (%2%)"
+DroppedFrames="Mistede bilder %1 (%2%)"
 
 NameExists.Title="Navn Eksisterer Allerede"
 NameExists.Text="Dette navnet er allerede i bruk."
