Alert user when using existing source name.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -30,7 +30,8 @@ DroppedFrames="Dropped Frames %1 (%2%)"
 NameExists.Title="Name already exists"
 NameExists.Text="The name is already in use."
 
-NoNameEntered="Please enter a valid name"
+NoNameEntered.Title="Please enter a valid name"
+NoNameEntered.Text="You cannot use empty names."
 
 # confirm delete dialog box
 ConfirmRemove.Title="Confirm Remove"
