--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -93,6 +93,7 @@ Basic.SourceSelect.AddExisting="Add Existing"
 Basic.PropertiesWindow="Properties for '%1'"
 Basic.PropertiesWindow.AutoSelectFormat="%1 (unsupported; autoselect: %2)"
 Basic.PropertiesWindow.SelectColor="Select color"
+Basic.PropertiesWindow.SelectFont="Select font"
 
 # status bar
 Basic.StatusBar.Reconnecting="Disconnected, reconnecting (attempt %1)"
