Add system font lookup for mac/windows
This changes the font plugin from using a font file to using a specific
installed system font, which is searched for on each specific system and
associated with the font file.  It now uses a font property instead of a
path property, and font size has been removed because the font property
now handles that.

When the module is first loaded, it will build up a list of system fonts
in order to be usable by Freetype.  It was quite painful to program this
because font files can contain multiple localized versions of their face
names, and then there was the issue where windows likes to mangle
custom style types to the font name.  Regardless, it all seems to have
worked out pretty well.

Minor issues:
- Truetype/Opentype fonts sometimes do not automatically have
  italic and/or bold styles available, it seems that the system applies
  transformations manually in those cases.  We don't do this yet,
  however, so right now a user might select a font with italic/bold
  only to discover that italic/bold doesn't always work.  Not entirely
  sure what to do about this yet.  There's probably a freetype function
  to do something like that somehow,

This also requires that iconv be used for non-windows systems to be able
to look up localized font names within font files.  Windows will use
the win32 API and code page IDs to translate font names.

--- a/plugins/text-freetype2/data/locale/en-US.ini
+++ b/plugins/text-freetype2/data/locale/en-US.ini
@@ -1,8 +1,7 @@
-FontFile="Font File"
+Font="Font"
 Text="Text"
 TextFile="Text File (UTF-8 or UTF-16)"
 ChatLogMode="Chat log mode (last 6 lines)"
-FontSize="Font Size (Pixels)"
 Color1="Color 1"
 Color2="Color 2"
 Outline="Outline"
