Add CoreGraphics window utilities

--- a/plugins/mac-capture/data/locale/en-US.ini
+++ b/plugins/mac-capture/data/locale/en-US.ini
@@ -5,3 +5,5 @@ CoreAudio.Device.Default="Default"
 DisplayCapture="Display Capture"
 DisplayCapture.Display="Display"
 DisplayCapture.ShowCursor="Show Cursor"
+WindowUtils.Window="Window"
+WindowUtils.ShowEmptyNames="Show Windows with empty names"
