Add Display Capture crop modes

--- a/plugins/mac-capture/data/locale/en-US.ini
+++ b/plugins/mac-capture/data/locale/en-US.ini
@@ -7,3 +7,12 @@ DisplayCapture.Display="Display"
 DisplayCapture.ShowCursor="Show Cursor"
 WindowUtils.Window="Window"
 WindowUtils.ShowEmptyNames="Show Windows with empty names"
+CropMode="Crop"
+CropMode.None="None"
+CropMode.Manual="Manual"
+CropMode.ToWindow="To Window"
+CropMode.ToWindowAndManual="To Window and Manual"
+Crop.origin.x="Crop left"
+Crop.origin.y="Crop top"
+Crop.size.width="Crop right"
+Crop.size.height="Crop bottom"
