Add Window Capture to mac-capture plugin

--- a/plugins/mac-capture/data/locale/en-US.ini
+++ b/plugins/mac-capture/data/locale/en-US.ini
@@ -5,6 +5,8 @@ CoreAudio.Device.Default="Default"
 DisplayCapture="Display Capture"
 DisplayCapture.Display="Display"
 DisplayCapture.ShowCursor="Show Cursor"
+WindowCapture="Window Capture"
+WindowCapture.ShowShadow="Show Window shadow"
 WindowUtils.Window="Window"
 WindowUtils.ShowEmptyNames="Show Windows with empty names"
 CropMode="Crop"
