Add File -> "Show Recordings" menu entry

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -144,6 +144,7 @@ Basic.Main.StopStreaming="Stop Streaming"
 Basic.MainMenu.File="&File"
 Basic.MainMenu.File.Export="&Export"
 Basic.MainMenu.File.Import="&Import"
+Basic.MainMenu.File.ShowRecordings="Show &Recordings"
 Basic.MainMenu.File.Settings="&Settings"
 Basic.MainMenu.File.Exit="E&xit"
 
