--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -174,6 +174,7 @@ Basic.MainMenu.Edit.Order.MoveToBottom="Move to &Bottom"
 # basic mode help menu
 Basic.MainMenu.Help="&Help"
 Basic.MainMenu.Help.Logs="&Log Files"
+Basic.MainMenu.Help.Logs.ShowLogs="&Show Log Files"
 Basic.MainMenu.Help.Logs.UploadCurrentLog="Upload &Current Log File"
 Basic.MainMenu.Help.Logs.UploadLastLog="Upload &Last Log File"
 Basic.MainMenu.Help.CheckForUpdates="Check For Updates"
