text-freetype2: Localize text file path filter

--- a/plugins/text-freetype2/data/locale/en-US.ini
+++ b/plugins/text-freetype2/data/locale/en-US.ini
@@ -1,6 +1,7 @@
 Font="Font"
 Text="Text"
 TextFile="Text File (UTF-8 or UTF-16)"
+TextFileFilter="Text Files (*.txt);;"
 ChatLogMode="Chat log mode (last 6 lines)"
 Color1="Color 1"
 Color2="Color 2"
