win-dshow: Add audio support
This implements audio support, allowing not only the ability to capture
the built-in audio from the video device's audio capture pin, but also
the ability to override the default audio with a custom audio device.

The DShowInput::Update function was split up and refactored a bit, as it
was getting a bit large and messy.

--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -1,5 +1,6 @@
 VideoCaptureDevice="Video Capture Device"
 Device="Device"
+ConfigureAudio="Configure Audio"
 ConfigureVideo="Configure Video"
 ConfigureCrossbar="Configure Crossbar"
 ResFPSType="Resolution/FPS Type"
@@ -11,3 +12,5 @@ Resolution="Resolution"
 VideoFormat="Video Format"
 VideoFormat.Any="Any"
 VideoFormat.Unknown="Unknown (%1)"
+UseCustomAudioDevice="Use custom audio device"
+AudioDevice="Audio Device"
