Combine linux-xcomposite and linux-capture (xshm)

--- a/plugins/linux-capture/data/locale/ar-SA.ini
+++ b/plugins/linux-capture/data/locale/ar-SA.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="التقاط الشاشة (XSHM)"
 Screen="الشاشة"
 CaptureCursor="مؤشر الالتقاط"
 
+XCCapture="التقاط النافذة (Xcomposite)"
+Window="نافذة"
+CropTop="الاقتطاع من الأعلى (بكسل)"
+CropLeft="الاقتطاع من اليسار (بكسل)"
+CropRight="الاقتطاع من اليمين (بكسل)"
+CropBottom="الاقتطاع من الأسفل (بكسل)"
+SwapRedBlue="مبادلة بين الأحمر و الأزرق"
+LockX="قفل السيرفر X عند الالتقاط"
+
