--- a/plugins/linux-capture/data/locale/de-DE.ini
+++ b/plugins/linux-capture/data/locale/de-DE.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Monitoraufnahme (XSHM)"
 Screen="Monitor"
 CaptureCursor="Mauszeiger aufnehmen"
 
+XCCapture="Fensteraufnahme (Xcomposite)"
+Window="Fenster"
+CropTop="Oben abschneiden (Pixel)"
+CropLeft="Links abschneiden (Pixel)"
+CropRight="Rechts abschneiden (Pixel)"
+CropBottom="Unten abschneiden (Pixel)"
+SwapRedBlue="Rot und Blau tauschen"
+LockX="X Server sperren während der Aufnahme"
+
