--- a/plugins/linux-capture/data/locale/es-ES.ini
+++ b/plugins/linux-capture/data/locale/es-ES.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Captura de pantalla (XSHM)"
 Screen="Pantalla"
 CaptureCursor="Captura de Cursor"
 
+XCCapture="Captura de ventana (Xcomposite)"
+Window="Ventana"
+CropTop="Recortar arriba (pixeles)"
+CropLeft="Recortar izquierda (pixeles)"
+CropRight="Recortar derecha (pixeles)"
+CropBottom="Recortar abajo (pixeles)"
+SwapRedBlue="Intercambiar rojo y azúl"
+LockX="Fijar X server mientras se captura"
+
