--- a/plugins/linux-capture/data/locale/fr-FR.ini
+++ b/plugins/linux-capture/data/locale/fr-FR.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Capture d'écran (XSHM)"
 Screen="Écran"
 CaptureCursor="Enregistrer le Curseur"
 
+XCCapture="Capture de la fenêtre (Xcomposite)"
+Window="Fenêtre"
+CropTop="Rogner en Haut (pixels)"
+CropLeft="Rogner à Gauche (pixels)"
+CropRight="Rogner à Droite (pixels)"
+CropBottom="Rogner en Bas (pixels)"
+SwapRedBlue="Intervertir le rouge et le bleu"
+LockX="Verrouiller le serveur X lors de la capture"
+
