--- a/plugins/linux-capture/data/locale/gl-ES.ini
+++ b/plugins/linux-capture/data/locale/gl-ES.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Captura de pantalla (XSHM)"
 Screen="Pantalla"
 CaptureCursor="Captura de cursor"
 
+XCCapture="Captura de xanela (Xcomposite)"
+Window="Xanela"
+CropTop="Recortar por arriba (píxeles)"
+CropLeft="Recortar pola esquerda (píxeles)"
+CropRight="Recortar pola dereita (píxeles)"
+CropBottom="Recortar por abaixo (píxeles)"
+SwapRedBlue="Trocar vermello e azul"
+LockX="Bloquear o servidor X durante a captura"
+
