--- a/plugins/linux-capture/data/locale/it-IT.ini
+++ b/plugins/linux-capture/data/locale/it-IT.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Cattura schermo (XSHM)"
 Screen="Schermo"
 CaptureCursor="Cattura il cursore"
 
+XCCapture="Cattura la finestra (xcomposite)"
+Window="Finestra"
+CropTop="Crop Superiore (pixels)"
+CropLeft="Crop Sinistro (pixels)"
+CropRight="Crop Destro (pixels)"
+CropBottom="Crop Inferiore (pixels)"
+SwapRedBlue="Inverti rosso e blu"
+LockX="Blocca l' X Server durante l'acquisizione"
+
