--- a/plugins/linux-capture/data/locale/nb-NO.ini
+++ b/plugins/linux-capture/data/locale/nb-NO.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Skjermopptak (XSHM)"
 Screen="Skjerm"
 CaptureCursor="Ta opp musepeker"
 
+XCCapture="Vindusopptak (Xcomposite)"
+Window="Vindu"
+CropTop="Beskjær toppen (piksler)"
+CropLeft="Beskjær venstre (piksler)"
+CropRight="Beskjær høyre (piksler)"
+CropBottom="Beskjær bunnen (piksler)"
+SwapRedBlue="Bytt rød og blå"
+LockX="Lås X server under opptak"
+
