--- a/plugins/linux-capture/data/locale/nl-NL.ini
+++ b/plugins/linux-capture/data/locale/nl-NL.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Schermcapture (XSHM)"
 Screen="Scherm"
 CaptureCursor="Cursor Opnemen"
 
+XCCapture="Venstercapture (Xcomposite)"
+Window="Venster"
+CropTop="Boven Bijsnijden (pixels)"
+CropLeft="Links Bijsnijden (pixels)"
+CropRight="Rechts Bijsnijden (pixels)"
+CropBottom="Onder Bijsnijden (pixels)"
+SwapRedBlue="Rood en blauw omwisselen"
+LockX="Lock X server tijdens het opnemen"
+
