--- a/plugins/linux-capture/data/locale/ru-RU.ini
+++ b/plugins/linux-capture/data/locale/ru-RU.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Захват экрана (XSHM)"
 Screen="Экран"
 CaptureCursor="Захват курсора"
 
+XCCapture="Захват окна (Xcomposite)"
+Window="Окно"
+CropTop="Обрезать сверху (пикселей)"
+CropLeft="Обрезать слева (пикселей)"
+CropRight="Обрезать справа (пикселей)"
+CropBottom="Обрезать снизу (пикселей)"
+SwapRedBlue="Поменять местами красный и синий"
+LockX="Блокировать X-сервер при захвате"
+
