--- a/plugins/linux-capture/data/locale/sr-SP.ini
+++ b/plugins/linux-capture/data/locale/sr-SP.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Екрански улаз (XSHM)"
 Screen="Екран"
 CaptureCursor="Снимај курсор"
 
+XCCapture="Улаз са прозора (Xcomposite)"
+Window="Прозор"
+CropTop="Одсеци одозго (пиксели)"
+CropLeft="Одсеци са лева (пиксели)"
+CropRight="Одсеци са десна (пиксели)"
+CropBottom="Одсеци одоздо (пиксели)"
+SwapRedBlue="Замени црвену и плаву"
+LockX="Закључај X сервер у току снимања"
+
