--- a/plugins/linux-capture/data/locale/sv-SE.ini
+++ b/plugins/linux-capture/data/locale/sv-SE.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Bildskärmskälla (XSHM)"
 Screen="Skärm"
 CaptureCursor="Visa muspekare"
 
+XCCapture="Fönsterkälla (Xcomposite)"
+Window="Fönster"
+CropTop="Beskär över kant (pixlar)"
+CropLeft="Beskär vänster kant (pixlar)"
+CropRight="Beskär höger kant (pixlar)"
+CropBottom="Beskär nedre kant (pixlar)"
+SwapRedBlue="Byt röd och blå"
+LockX="Lås X-servern medan källan är aktiv"
+
