--- a/plugins/linux-capture/data/locale/tr-TR.ini
+++ b/plugins/linux-capture/data/locale/tr-TR.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Ekran Yakalama (XSHM)"
 Screen="Ekran"
 CaptureCursor="İmleci Yakala"
 
+XCCapture="Pencere Yakalama (Xcomposite)"
+Window="Pencere"
+CropTop="Üstten Kırp (piksel)"
+CropLeft="Soldan Kırp (piksel)"
+CropRight="Sağdan Kırp (piksel)"
+CropBottom="Alttan Kırp (piksel)"
+SwapRedBlue="Kırmızı ve maviyi değiştir"
+LockX="Yakalama sırasında X sunucusunu kilitle"
+
