--- a/plugins/linux-capture/data/locale/da-DK.ini
+++ b/plugins/linux-capture/data/locale/da-DK.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Indfang Skærm (XSHM)"
 Screen="Skærm"
 CaptureCursor="Indfang markøren"
 
+XCCapture="Indfang Vindue (Xcomposite)"
+Window="Vindue"
+CropTop="Beskær Top (pixels)"
+CropLeft="Beskær Venstre (pixels)"
+CropRight="Beskær Højre (pixels)"
+CropBottom="Beskær bund (pixels)"
+SwapRedBlue="Swap rød og blå"
+LockX="Lås X server ved optagelse"
+
