--- a/plugins/linux-capture/data/locale/eu-ES.ini
+++ b/plugins/linux-capture/data/locale/eu-ES.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Ikusleiho Harpena (XSHM)"
 Screen="Ikusleihoa"
 CaptureCursor="Hartu Kurtsorea"
 
+XCCapture="Leiho Harpena (Xcomposite)"
+Window="Leihoa"
+CropTop="Moztu Goitik (pixel)"
+CropLeft="Moztu Ezkerretik (pixel)"
+CropRight="Moztu Eskuinetik (pixel)"
+CropBottom="Moztu Behetik (pixel)"
+SwapRedBlue="Aldatu gorria eta urdina"
+LockX="Blokeatu X zerbitzaria harpenean"
+
