--- a/plugins/linux-capture/data/locale/hu-HU.ini
+++ b/plugins/linux-capture/data/locale/hu-HU.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Képernyő Felvétel (XSHM)"
 Screen="Képernyő"
 CaptureCursor="Kurzor Rögztítése"
 
+XCCapture="Ablak Felvétel (Xcomposite)"
+Window="Ablak"
+CropTop="Felső Levágása (pixelek)"
+CropLeft="Bal Levágása (pixelek)"
+CropRight="Jobb Levágása (pixelek)"
+CropBottom="Alsó Levágása (pixelek)"
+SwapRedBlue="Piros és Kék Cseréje"
+LockX="X Szerver Zárolása Rögzítéskor"
+
