--- a/plugins/linux-capture/data/locale/ja-JP.ini
+++ b/plugins/linux-capture/data/locale/ja-JP.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="画面キャプチャ （XSHM）"
 Screen="画面"
 CaptureCursor="カーソルをキャプチャ"
 
+XCCapture="ウィンドウキャプチャ (Xcomposite)"
+Window="ウィンドウ"
+CropTop="上部クロップ(ピクセル)"
+CropLeft="左側クロップ(ピクセル)"
+CropRight="右側クロップ(ピクセル)"
+CropBottom="下部クロップ(ピクセル)"
+SwapRedBlue="赤と青を入れ替え"
+LockX="キャプチャ時にXサーバをロック"
+
