--- a/plugins/linux-capture/data/locale/ko-KR.ini
+++ b/plugins/linux-capture/data/locale/ko-KR.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="화면 캡쳐 (XSHM)"
 Screen="화면"
 CaptureCursor="커서 캡쳐"
 
+XCCapture="윈도우 캡쳐(Xcomposite)"
+Window="윈도우"
+CropTop="위쪽 자르기 (픽셀)"
+CropLeft="왼쪽 자르기 (픽셀)"
+CropRight="오른쪽 자르기 (픽셀)"
+CropBottom="아래 자르기 (픽셀)"
+SwapRedBlue="적청 교환"
+LockX="캡쳐 시 X 서버를 잠금"
+
