--- a/plugins/linux-capture/data/locale/pl-PL.ini
+++ b/plugins/linux-capture/data/locale/pl-PL.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Przechwytywanie ekranu (XSHM)"
 Screen="Ekran"
 CaptureCursor="Przechwytywanie kursora"
 
+XCCapture="Przechwytywanie okna (XComposite)"
+Window="Okno"
+CropTop="Przytnij od góry (piksele)"
+CropLeft="Przytnij z lewej (piksele)"
+CropRight="Przytnij z prawej (piksele)"
+CropBottom="Przytnij od spodu (piksele)"
+SwapRedBlue="Zamień czerwony i niebieski"
+LockX="Zablokuj serwer X podczas przechwytywania"
+
