--- a/plugins/linux-capture/data/locale/pt-BR.ini
+++ b/plugins/linux-capture/data/locale/pt-BR.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Captura de Tela (XSHM)"
 Screen="Tela"
 CaptureCursor="Capturar o Cursor"
 
+XCCapture="Captura de Janela (Xcomposite)"
+Window="Janela"
+CropTop="Cortar em Cima (Pixels)"
+CropLeft="Cortar à Esquerda (Pixels)"
+CropRight="Cortar à Direita (Pixels)"
+CropBottom="Cortar em Baixo (Pixels)"
+SwapRedBlue="Trocar Vermelho com Azul"
+LockX="Bloquear servidor X durante a captura"
+
