--- a/plugins/linux-capture/data/locale/pt-PT.ini
+++ b/plugins/linux-capture/data/locale/pt-PT.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Captura de tela (XSHM)"
 Screen="Tela"
 CaptureCursor="Capturar o Cursor"
 
+XCCapture="Captura de janela (Xcomposite)"
+Window="Janela"
+CropTop="Cortar em Cima (Pixels)"
+CropLeft="Cortar à Esquerda (Pixels)"
+CropRight="Cortar à direita (Pixels)"
+CropBottom="Cortar em Baixo (Pixels)"
+SwapRedBlue="Trocar vermelho e azul"
+LockX="Bloquear servidor X durante a captura"
+
