--- a/plugins/linux-capture/data/locale/sl-SI.ini
+++ b/plugins/linux-capture/data/locale/sl-SI.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="Zajemanje zaslona (XSHM)"
 Screen="Zaslon"
 CaptureCursor="Zajemaj kazalec"
 
+XCCapture="Zajemanje okna (Xcomposite)"
+Window="Okno"
+CropTop="Obreži zgoraj (pixels)"
+CropLeft="Obreži levo (pixels)"
+CropRight="Obreži desno (pixels)"
+CropBottom="Obreži spodaj (pixels)"
+SwapRedBlue="Zamenjaj modro in rdečo"
+LockX="Zakleni X server med zajemanjem"
+
