--- a/plugins/linux-capture/data/locale/zh-TW.ini
+++ b/plugins/linux-capture/data/locale/zh-TW.ini
@@ -2,3 +2,12 @@ X11SharedMemoryScreenInput="截取螢幕（XSHM）"
 Screen="螢幕"
 CaptureCursor="捕捉游標"
 
+XCCapture="截取視窗（Xcomposite）"
+Window="視窗"
+CropTop="剪裁頂部（px）"
+CropLeft="剪裁左側（px）"
+CropRight="剪裁右側（px）"
+CropBottom="剪裁底部（px）"
+SwapRedBlue="交換紅藍顏色"
+LockX="截取時鎖定 X server"
+
