Add UI for remuxing recordings via FFmpeg

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -61,6 +61,21 @@ LicenseAgreement.ClickIAgreeToContinue="If you accept the terms of the agreement
 LicenseAgreement.IAgree="I Agree"
 LicenseAgreement.Exit="Exit"
 
+# remux dialog
+Remux.SourceFile="OBS Recording"
+Remux.TargetFile="Target File"
+Remux.Remux="Remux"
+Remux.RecordingPattern="OBS Recording (*.flv)"
+Remux.FinishedTitle="Remuxing finished"
+Remux.Finished="Recording remuxed"
+Remux.FinishedError="Recording remuxed, but the file may be incomplete"
+Remux.SelectRecording="Select OBS Recording …"
+Remux.SelectTarget="Select target file …"
+Remux.FileExistsTitle="Target file exists"
+Remux.FileExists="Target file exists, do you want to replace it?"
+Remux.ExitUnfinishedTitle="Remuxing in progress"
+Remux.ExitUnfinished="Remuxing is not finished, stopping now may render the target file unusable.\nAre you sure you want to stop remuxing?"
+
 # update dialog
 UpdateAvailable="New Update Available"
 UpdateAvailable.Text="Version %1.%2.%3 is now available.  <a href='%4'>Click here to download</a>"
@@ -148,6 +163,7 @@ Basic.MainMenu.File="&File"
 Basic.MainMenu.File.Export="&Export"
 Basic.MainMenu.File.Import="&Import"
 Basic.MainMenu.File.ShowRecordings="Show &Recordings"
+Basic.MainMenu.File.Remux="&Remux Recordings"
 Basic.MainMenu.File.Settings="&Settings"
 Basic.MainMenu.File.Exit="E&xit"
 
