Update INSTALL for OSX 10.8

--- a/INSTALL
+++ b/INSTALL
@@ -78,8 +78,16 @@ Mac OSX
     in mind that you will have to set the QTDIR environment variable to the
     Qt5 build base directory.
 
+  - Make sure to have the OSX 10.9 or newer SDK installed (comes with recent
+    versions of Xcode)
+
   - In a terminal, go to the obs-studio directory create a 'build' sub
-    directory and change to it, then to build, type: cmake .. && make
+    directory and change to it, then to build, type:
+
+      - on OSX 10.9 or newer:
+          cmake .. && make
+      - on OSX 10.8:
+          MACOSX_DEPLOYMENT_TARGET=10.8 cmake -DCMAKE_OSX_SYSROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk/ .. && make
 
   - It builds in a modular structure by default.  To run it via terminal, go to
     build/rundir/RelWithDebInfo/bin, then type ./obs to run.
