Add interaction gui

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -95,6 +95,9 @@ Basic.PropertiesWindow.AutoSelectFormat="%1 (unsupported; autoselect: %2)"
 Basic.PropertiesWindow.SelectColor="Select color"
 Basic.PropertiesWindow.SelectFont="Select font"
 
+# interaction window
+Basic.InteractionWindow="Interacting with '%1'"
+
 # status bar
 Basic.StatusBar.Reconnecting="Disconnected, reconnecting (attempt %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconnection successful"
