--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -206,7 +206,7 @@ Basic.Settings.Output.AudioBitrate="Audio Bitrate"
 Basic.Settings.Output.Reconnect="Automatically Reconnect"
 Basic.Settings.Output.RetryDelay="Retry Delay (seconds)"
 Basic.Settings.Output.MaxRetries="Maximum Retries"
-Basic.Settings.Output.Advanced="Advanced Encoder Settings"
+Basic.Settings.Output.Advanced="Enable Advanced Encoder Settings"
 Basic.Settings.Output.X264Preset="x264 CPU Preset"
 Basic.Settings.Output.CustomX264Settings="Custom x264 Settings"
 
