--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -209,6 +209,7 @@ Basic.Settings.Output.MaxRetries="Maximum Retries"
 Basic.Settings.Output.Advanced="Enable Advanced Encoder Settings"
 Basic.Settings.Output.X264Preset="x264 Preset"
 Basic.Settings.Output.CustomX264Settings="Custom x264 Settings"
+Basic.Settings.Output.UseCBR="Use Constant Bitrate"
 
 # basic mode 'video' settings
 Basic.Settings.Video="Video"
