Add application-capture mode to PA output capture

--- a/plugins/linux-pulseaudio/data/locale/en-US.ini
+++ b/plugins/linux-pulseaudio/data/locale/en-US.ini
@@ -1,3 +1,5 @@
 PulseInput="Audio Input Capture (PulseAudio)"
 PulseOutput="Audio Output Capture (PulseAudio)"
 Device="Device"
+CaptureApp="Capture single application"
+CapturedApp="Captured application"
