Resolve shortcut key conflict for "Show/Remux Recordings"

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -163,7 +163,7 @@ Basic.MainMenu.File="&File"
 Basic.MainMenu.File.Export="&Export"
 Basic.MainMenu.File.Import="&Import"
 Basic.MainMenu.File.ShowRecordings="Show &Recordings"
-Basic.MainMenu.File.Remux="&Remux Recordings"
+Basic.MainMenu.File.Remux="Re&mux Recordings"
 Basic.MainMenu.File.Settings="&Settings"
 Basic.MainMenu.File.Exit="E&xit"
 
