Add basic properties and fix for enum_monitors
enum_monitors would always stop after first found monitor due to wrong return value.

--- a/plugins/win-capture/data/locale/en-US.ini
+++ b/plugins/win-capture/data/locale/en-US.ini
@@ -7,3 +7,4 @@ WindowCapture.Priority.Class="Window Class"
 WindowCapture.Priority.Exe="Executable Name"
 CaptureCursor="Capture Cursor"
 Compatibility="Multi-adapter Compatibility"
+Monitor="Monitor"
