Add monitor selection to properties

--- a/plugins/win-capture/data/locale/en-US.ini
+++ b/plugins/win-capture/data/locale/en-US.ini
@@ -8,3 +8,4 @@ WindowCapture.Priority.Exe="Executable Name"
 CaptureCursor="Capture Cursor"
 Compatibility="Multi-adapter Compatibility"
 Monitor="Monitor"
+PrimaryMonitor="Primary Monitor"
