Add monitor selection and basic properties

--- a/plugins/win-capture/data/locale/en-US.ini
+++ b/plugins/win-capture/data/locale/en-US.ini
@@ -7,3 +7,5 @@ WindowCapture.Priority.Class="Window Class"
 WindowCapture.Priority.Exe="Executable Name"
 CaptureCursor="Capture Cursor"
 Compatibility="Multi-adapter Compatibility"
+Monitor="Monitor"
+PrimaryMonitor="Primary Monitor"
