mac-syphon: Add "Allow Transparency" property
Transparency is now disabled by default, so that alpha values from
injected back buffers don't propagate to OBS (e.g. Minecraft doesn't
render properly in OBS unless "Allow Transparency" is disabled)

--- a/plugins/mac-syphon/data/locale/en-US.ini
+++ b/plugins/mac-syphon/data/locale/en-US.ini
@@ -8,3 +8,4 @@ Crop.origin.x="Crop left"
 Crop.origin.y="Crop top"
 Crop.size.width="Crop right"
 Crop.size.height="Crop bottom"
+AllowTransparency="Allow Transparency"
