UI: Add OBSHotkey{Edit,Label,Widget}
OBSHotkeyEdit is similar to QKeySequenceEdit, except less terribad on OSX, while
OBSHotkeyWidget provides a container that automagically encapsulates multiple
bindings per hotkey

OBSHotkeyLabel in combination with OBSHotkeyWidget provides mechanisms for
dealing with hotkey pairs (see upcoming usage in window-basic-settings.cpp)

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -35,6 +35,8 @@ DroppedFrames="Dropped Frames %1 (%2%)"
 PreviewProjector="Fullscreen Projector (Preview)"
 SceneProjector="Fullscreen Projector (Scene)"
 SourceProjector="Fullscreen Projector (Source)"
+Clear="Clear"
+Revert="Revert"
 
 # "name already exists" dialog box
 NameExists.Title="Name already exists"
