--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -350,3 +350,49 @@ Basic.AdvAudio.Mono="Downmix to Mono"
 Basic.AdvAudio.Panning="Panning"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
 Basic.AdvAudio.AudioTracks="Tracks"
+
+# hotkeys that may lack translation on certain operating systems
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Left"
+Hotkeys.Right="Right"
+Hotkeys.Up="Up"
+Hotkeys.Down="Down"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Menu"
+Hotkeys.Space="Space"
+Hotkeys.NumpadNum="Numpad %1"
+Hotkeys.NumpadMultiply="Numpad Multiply"
+Hotkeys.NumpadDivide="Numpad Divide"
+Hotkeys.NumpadAdd="Numpad Add"
+Hotkeys.NumpadSubtract="Numpad Subtract"
+Hotkeys.NumpadDecimal="Numpad Decimal"
+Hotkeys.AppleKeypadNum="%1 (Keypad)"
+Hotkeys.AppleKeypadMultiply="* (Keypad)"
+Hotkeys.AppleKeypadDivide="/ (Keypad)"
+Hotkeys.AppleKeypadAdd="+ (Keypad)"
+Hotkeys.AppleKeypadSubtract="- (Keypad)"
+Hotkeys.AppleKeypadDecimal=". (Keypad)"
+Hotkeys.AppleKeypadEqual="= (Keypad)"
+Hotkeys.MouseButton="Mouse %1"
+
+# audio hotkeys
+Mute="Mute"
+Unmute="Unmute"
+Push-to-talk="Push-to-talk"
+
+# scene item hotkeys
+SceneItemShow="Show '%1'"
+SceneItemHide="Hide '%1'"
