UI: Add hotkeys page in settings dialog

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -353,6 +353,10 @@ Basic.AdvAudio.Panning="Panning"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
 Basic.AdvAudio.AudioTracks="Tracks"
 
+# basic mode 'hotkeys' settings
+Basic.Settings.Hotkeys="Hotkeys"
+Basic.Settings.Hotkeys.Pair="Key combinations shared with '%1' act as toggles"
+
 # hotkeys that may lack translation on certain operating systems
 Hotkeys.Insert="Insert"
 Hotkeys.Delete="Delete"
