--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -361,6 +361,9 @@ Basic.AdvAudio.AudioTracks="Tracks"
 Basic.Settings.Hotkeys="Hotkeys"
 Basic.Settings.Hotkeys.Pair="Key combinations shared with '%1' act as toggles"
 
+# basic mode hotkeys
+Basic.Hotkeys.SelectScene="Switch to scene"
+
 # hotkeys that may lack translation on certain operating systems
 Hotkeys.Insert="Insert"
 Hotkeys.Delete="Delete"
