UI: Add Start/Stop Recording/Streaming hotkeys

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -362,6 +362,10 @@ Basic.Settings.Hotkeys="Hotkeys"
 Basic.Settings.Hotkeys.Pair="Key combinations shared with '%1' act as toggles"
 
 # basic mode hotkeys
+Basic.Hotkeys.StartStreaming="Start Streaming"
+Basic.Hotkeys.StopStreaming="Stop Streaming"
+Basic.Hotkeys.StartRecording="Start Recording"
+Basic.Hotkeys.StopRecording="Stop Recording"
 Basic.Hotkeys.SelectScene="Switch to scene"
 
 # hotkeys that may lack translation on certain operating systems
