--- a/plugins/linux-capture/data/locale/en-US.ini
+++ b/plugins/linux-capture/data/locale/en-US.ini
@@ -9,3 +9,4 @@ CropRight="Crop Right (pixels)"
 CropBottom="Crop Bottom (pixels)"
 SwapRedBlue="Swap red and blue"
 LockX="Lock X server when capturing"
+IncludeXBorder="Include X Border"
