--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -12,8 +12,10 @@ Apply="Apply"
 Cancel="Cancel"
 Yes="Yes"
 No="No"
-Add="Add"
-Remove="Remove"
+AddSource="Add Source"
+RemoveSource="Remove Source"
+AddScene="Add Scene"
+RemoveScene="Remove Scene"
 Rename="Rename"
 Properties="Properties"
 MoveUp="Move Up"
