--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -12,8 +12,10 @@ Apply="Apply"
 Cancel="Cancel"
 Yes="Yes"
 No="No"
-Add="Add"
-Remove="Remove"
+Add Scene="Add Scene"
+Remove Scene="Remove Scene"
+Add Source="Add Source"
+Remove Source="Remove Source"
 Rename="Rename"
 Properties="Properties"
 MoveUp="Move Up"
